# fdo-resolver

./: README.md  pyproject.toml
.github/workflows/: ci.yml
fdo_resolver/: __init__.py  resolver.py
tests/: test_resolver.py
