[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fdo-resolver"
version = "0.2.0"
description = "Resolve RO-Crate FAIR Digital Object inputs for scientific workflows, with I-ADOPT variable matching"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "FAIR2Adapt"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "rocrate>=0.10.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/FAIR2Adapt/fdo-resolver"
